# FastGlobalRegistration

./: .gitignore  CHANGELOG  LICENSE  readme.md  troubleshooting.md
dataset/pairwise_no_noise_01_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_02_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_03_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_04_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_05_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_06_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_07_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_08_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_09_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_10_rot_05/: Depth_0000.ply  Depth_0001.ply  alignment.config  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_11_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_12_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_13_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_14_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_15_rot_05/: Depth_0000.ply  Depth_0001.ply  choi.txt  choi_eval.txt  goicp_trim_0.txt  goicp_trim_0_eval.txt  goicp_trim_1.txt  goicp_trim_1_eval.txt  gt.info  opencv_global.txt  opencv_global_eval.txt  output.txt  output_eval.txt  pcl_global.txt  pcl_global_eval.txt  super4pcs.txt  super4pcs_eval.txt
dataset/pairwise_no_noise_16_rot_05/: Depth_0000.ply  Depth_0001.ply  (+15 more)
source/: CMakeLists.txt  FastGlobalRegistration.opensdf  FastGlobalRegistration.sln
source/Cmake/: FindMatlab.cmake  Matlabdef.def
source/FastGlobalRegistration/: CMakeLists.txt  FastGlobalRegistration.vcxproj  FastGlobalRegistration.vcxproj.filters  app.cpp  app.h  evaluation.cpp  main.cpp
source/Matlab/: CMakeLists.txt  demo.m  fast_global_registration.cpp  fast_global_registration.mexmaci64  fgr_demo.m  mex_main.cpp  mex_main.mexmaci64  mex_read_features.mexmaci64  output.txt  read_features.cpp  read_features.mexmaci64
source/Toolbox/: evaluate.py
(+1954 files in other folders)
